--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7294,7 +7294,12 @@ section.ms-bids {
 @media screen and (max-width: 500px) {
 
   .ms-index__body .hero .hero-body .container--initial-flow {
-    margin-top: 3vh;
+    margin-top: 5vh;
+  }
+
+  .ms-index__body .hero .hero-body .container--initial-flow .columns {
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
   }
 
   .ms-index__body .hero .hero-body .container--initial-flow .column.is-1,
@@ -7303,8 +7308,8 @@ section.ms-bids {
   }
 
   .ms-index__body .hero .hero-body .container--initial-flow .column.is-4 {
-    margin-bottom: 1rem;
-    height: 36vh;
+    margin-bottom: 15px;
+    height: 34vh;
   }
 
   .hero .hero-body .container--initial-flow .column.has-border p {
