update bg image

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6857,7 +6857,7 @@ body {
 
 .hero {
   background: #330099;
-  background-image: url("../img/bg2.jpg");
+  background-image: url("../img/bg-synth.jpg");
   background-size: cover;
   background-position-x: center;
   background-position-y: center; }
