--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6938,6 +6938,7 @@ body {
         display: none; }
 
 .hero.hero--homepage-foundation {
+  border-top: 1px solid #003;
   background-color: #e6e6fc; }
   .hero.hero--homepage-foundation .hero-body {
     color: #000033;
@@ -6950,7 +6951,7 @@ body {
       margin-left: auto;
       margin-right: auto; }
       .hero.hero--homepage-foundation .hero-body .container h3 {
-        color: #9966ff;
+        color: #330099;
         font-weight: bold;
         margin-top: 5rem;
         margin-bottom: 3rem;
