--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6866,7 +6866,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.9rem; }
   .navbar .navbar-item strong {
-    color: #8a8ab2;
+    color: #330099;
     font-weight: normal; }
 
 .ms-label {
@@ -6938,8 +6938,9 @@ body {
         display: none; }
 
 .hero.hero--homepage-foundation {
-  border-top: 1px solid #003;
-  background-color: #e6e6fc; }
+  border-top: 5px solid #000033;
+  background: #e6e6fc url(../img/bg-tile.svg) repeat;
+  background-size: 10px; }
   .hero.hero--homepage-foundation .hero-body {
     color: #000033;
     text-align: center;
@@ -6950,7 +6951,7 @@ body {
       text-align: left;
       margin-left: auto;
       margin-right: auto; }
-      .hero.hero--homepage-foundation .hero-body .container h3 {
+      .hero.hero--homepage-foundation .hero-body .container h3.title {
         color: #330099;
         font-weight: bold;
         margin-top: 5rem;
@@ -6967,13 +6968,13 @@ body {
       .hero.hero--homepage-foundation .hero-body .container ul span {
         color: #9966ff;
         margin-right: 0.25rem; }
-      .hero.hero--homepage-foundation .hero-body .container h4 {
+      .hero.hero--homepage-foundation .hero-body .container h4.title {
         margin-top: 5rem;
         margin-bottom: 7.5rem;
         color: #000033;
         text-align: left;
         font-weight: bold; }
-        .hero.hero--homepage-foundation .hero-body .container h4 span {
+        .hero.hero--homepage-foundation .hero-body .container h4.title span {
           background-color: #ff3860;
           color: #fff;
           display: inline-block;
@@ -7108,7 +7109,7 @@ section.ms-bids {
       margin-bottom: 3rem;
       text-transform: initial;
       font-size: 0.8rem;
-      color: #8a8ab2;
+      color: #330099;
       font-size: 0.8rem; }
   section.ms-bids #app .table.ms-properties-table {
     color: #fff;
@@ -7278,6 +7279,7 @@ section.ms-bids {
 .footer {
   color: #fff;
   background: #000033;
+  background-image: linear-gradient(to bottom, #330099, #000033);
   padding-top: 4rem;
   padding-bottom: 4rem; }
   .footer .column.column--footer-links .fas.fa-envelope {
